ipc/ipdl/test/ipdl/ok/empty.ipdl
protocol empty {
child: async Msg();
};
