ipc/ipdl/test/ipdl/error/urgentChildToParent.ipdl
intr protocol urgentChildToParent {

    // can't declare urgent child-to-parent messages
parent: ugrent Msg();

};
